CRUD completo con VBC

--- a/AppCoder/templates/AppCoder/busquedaComision.html
+++ b/AppCoder/templates/AppCoder/busquedaComision.html
@@ -5,7 +5,7 @@
 {% block ContenidoQueCambia %}
 
 <form action="/AppCoder/buscar/" method="GET">
-    <input type="number" placeholder="Comision" name="comision" id="comision">
+    <input type="number" placeholder="Comision" name="comision">
     <input type="submit" value="Buscar">
 </form>
 
