--- a/AppCoder/templates/AppCoder/profesores.html
+++ b/AppCoder/templates/AppCoder/profesores.html
@@ -4,6 +4,15 @@
 
 {% block ContenidoQueCambia %}
 
-<h1>PROFESORES</h1>
+<h1>Listado de profes</h1>
+{% for profesor in profesores %}
+<p>{{profesor}}</p>
+<button>
+    <a href="{% url 'eliminarProfesor' profesor.nombre %}"> Eliminar</a>
+</button>
+<button>
+    <a href="{% url 'editarProfesor' profesor.nombre %}"> Editar</a>
+</button>
+{% endfor %}
 
 {% endblock %}
